--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@iconify/react": "^5.0.1",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.21",
+    "@mui/system": "^5.15.20",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.16.0",
+    "apexcharts": "^3.49.2",
+    "date-fns": "^3.6.0",
+    "numeral": "^2.0.6",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.52.0",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "simplebar-react": "^3.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
