--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": ".",
   "name": "anshulchaudhary",
   "version": "0.1.0",
   "private": true,
@@ -27,8 +28,13 @@
     "simplebar-react": "^3.2.6",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
