--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chaudharyanshul.github.io/AnshulChaudhary",
+  "homepage": "https://chaudharyanshul.com",
   "name": "anshulchaudhary",
   "version": "0.1.0",
   "private": true,
